tdf#91999 FILESAVE: Shapes Rotated 180 Moved on Round-Trip

Essentially reverts commit 60635557 to fix rotation issue with 180 deg.

Change-Id: Iba1c48e028ab2c65102ee298c9c3bac54c98fddb